# wlvideo

./: LICENSE  README.md  meson.build  wlvideo.1
src/: decode.c  main.c  render.c  setup-protocols.sh  wayland.c  wlvideo.h
